# fastapi-auth

./: .gitignore  .windsurfrules  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile
fastapi_todo_app/: db.py  main.py  settings.py
fastapi_todo_app/models/: forgot_password.py  todo_model.py  two_factor_model.py  user_model.py  verification_model.py
fastapi_todo_app/router/: user_router.py
fastapi_todo_app/schemas/: todo_schema.py  user_schema.py  verification_schema.py
fastapi_todo_app/services/: auth.py  email_service.py
tests/: conftest.py  test_main.py  test_user_router.py
